--- a/.github/workflows/test-requirements-macos.yml
+++ b/.github/workflows/test-requirements-macos.yml
@@ -1,4 +1,4 @@
-name: Test Requirements on Linux/Ubuntu-latest | python 3.7->3.9
+name: Test Requirements on MacOs-latest | python 3.7->3.9
 on: [push]
 #defaults:
 #  run:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest] #,windows-latest
+        os: [macos-latest] #,windows-latest
         python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v3
@@ -27,15 +27,16 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       #- name: Create Workspace Folder
-      #  run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-linux
+      #  run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-win
       #- name: Copy Files & folders to Workspace Folder
-      #  run: cp hiphp-linux/install_all_requirements_linux.sh wrdir/hiphp-linux/install_all_requirements_linux.sh && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp hiphp-linux/requirements-linux.txt wrdir/hiphp-linux/requirements-linux.txt
+      #  run: cp hiphp-win/install_all_requirements_win.bat wrdir/hiphp-win/install_all_requirements_win.bat && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp hiphp-win/requirements-win.txt wrdir/hiphp-win/requirements-win.txt
+      #- name: Create Config.ini file
+      #  run: |
+      #      python -c "import sys; open('wrdir/config.ini', 'w+').write('python_default_path='+sys.executable)"
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      #- name: change dir
-      #  run: cd wrdir/hiphp-linux
       #- name: Run
-      #  run: bash install_all_requirements_linux.sh
+      #  run: wrdir/hiphp-win/install_all_requirements_win.bat
       - name: test requirements.txt
       run: pip install -r requirements.txt
       - name: test requirements-pypi.txt
@@ -44,5 +45,6 @@ jobs:
       run: pip install -r hiphp-desktop/requirements-dst.txt
       - name: test hiphp-tk/requirements-tk.txt
       run: pip install -r hiphp-tk/requirements-tk.txt
-      - name: test hiphp-linux/requirements-linux.txt
-      run: pip install -r hiphp-linux/requirements-linux.txt
+      #- name: test hiphp-win/requirements-win.txt
+      #run: pip install -r hiphp-win/requirements-win.txt
+
