--- a/.github/workflows/test-requirements-linux.yml
+++ b/.github/workflows/test-requirements-linux.yml
@@ -26,25 +26,12 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      #- name: Create Workspace Folder
-      #  run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-linux
-      #- name: Copy Files & folders to Workspace Folder
-      #  run: cp hiphp-linux/install_all_requirements_linux.sh wrdir/hiphp-linux/install_all_requirements_linux.sh && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp hiphp-linux/requirements-linux.txt wrdir/hiphp-linux/requirements-linux.txt
+      - name: Create Workspace Folder
+        run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-linux
+      - name: Copy Files & folders to Workspace Folder
+        run: cp hiphp-linux/requirements-linux.txt wrdir/hiphp-linux/requirements-linux.txt && cp hiphp-linux/install_all_requirements_linux.sh wrdir/hiphp-linux/install_all_requirements_linux.sh && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      #- name: change dir
-      #  run: cd wrdir/hiphp-linux
-      #- name: Run
-      #  run: bash install_all_requirements_linux.sh
-      - name: test requirements.txt
-      run: pip install -r requirements.txt
-      - name: test requirements-pypi.txt
-      run: pip install -r requirements-pypi.txt
-      - name: test hiphp-desktop/requirements-dst.txt
-      run: pip install -r hiphp-desktop/requirements-dst.txt
-      - name: test hiphp-tk/requirements-tk.txt
-      run: pip install -r hiphp-tk/requirements-tk.txt
-      - name: test hiphp-linux/requirements-linux.txt
-      run: pip install -r hiphp-linux/requirements-linux.txt
-      - name: test run.py
-      run: python run.py
+      - name: Run
+        run: cd wrdir/hiphp-linux && bash install_all_requirements_linux.sh
+
