--- a/.github/workflows/test-requirements-win.yml
+++ b/.github/workflows/test-requirements-win.yml
@@ -1,4 +1,4 @@
-name: Test Requirements on Windows-latest | python 3.7->3.9
+name: Test requirements windows
 on: [push]
 #defaults:
 #  run:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [windows-latest] #,windows-latest
+        os: [ubuntu-latest] #,windows-latest
         python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v3
@@ -26,25 +26,12 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      #- name: Create Workspace Folder
-      #  run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-win
-      #- name: Copy Files & folders to Workspace Folder
-      #  run: cp hiphp-win/install_all_requirements_win.bat wrdir/hiphp-win/install_all_requirements_win.bat && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp hiphp-win/requirements-win.txt wrdir/hiphp-win/requirements-win.txt
-      #- name: Create Config.ini file
-      #  run: |
-      #      python -c "import sys; open('wrdir/config.ini', 'w+').write('python_default_path='+sys.executable)"
+      - name: Create Workspace Folder
+        run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-win
+      - name: Copy Files & folders to Workspace Folder
+        run: cp hiphp-win/requirements-win.txt wrdir/hiphp-win/requirements-win.txt && cp hiphp-win/install_all_requirements_win.sh wrdir/hiphp-win/install_all_requirements_win.sh && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      #- name: Run
-      #  run: wrdir/hiphp-win/install_all_requirements_win.bat
-      - name: test requirements.txt
-      run: pip install -r requirements.txt
-      - name: test requirements-pypi.txt
-      run: pip install -r requirements-pypi.txt
-      - name: test hiphp-desktop/requirements-dst.txt
-      run: pip install -r hiphp-desktop/requirements-dst.txt
-      - name: test hiphp-tk/requirements-tk.txt
-      run: pip install -r hiphp-tk/requirements-tk.txt
-      - name: test hiphp-win/requirements-win.txt
-      run: pip install -r hiphp-win/requirements-win.txt
+      - name: Run
+        run: cd wrdir/hiphp-win && bash install_all_requirements_win.bat
 
