--- a/.github/workflows/test-requirements-win.yml
+++ b/.github/workflows/test-requirements-win.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create Workspace Folder
         run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-win
       - name: Copy Files & folders to Workspace Folder
-        run: cp hiphp-win/requirements-win.txt wrdir/hiphp-win/requirements-win.txt && cp hiphp-win/install_all_requirements_win.sh wrdir/hiphp-win/install_all_requirements_win.sh && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
+        run: cp hiphp-win/requirements-win.txt wrdir/hiphp-win/requirements-win.txt && cp hiphp-win/install_all_requirements_win.bat wrdir/hiphp-win/install_all_requirements_win.bat && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Run
