--- a/.github/workflows/pipup.yml
+++ b/.github/workflows/pipup.yml
@@ -28,8 +28,14 @@ jobs:
           python-version: 3.9
 
       # Install requirements
-      - name: "Installs requirements"
-        run: bash hiphp-linux/install_all_requirements_linux.sh
+      - name: install requirements.txt
+        run: python -m pip install -r requirements.txt
+      - name: install requirements-pypi.txt
+        run: python -m pip install -r requirements-pypi.txt
+      - name: install hiphp-desktop/requirements-dst.txt
+        run: python -m pip install -r hiphp-desktop/requirements-dst.txt
+      - name: install hiphp-tk/requirements-tk.txt
+        run: python -m pip install -r hiphp-tk/requirements-tk.txt
 
       # Install dependencies
       - name: "Installs dependencies"
