--- a/.github/workflows/pypi-setup-linux.yml
+++ b/.github/workflows/pypi-setup-linux.yml
@@ -1,4 +1,4 @@
-name: PYPI Build & Setup On Linux/Ubuntu-latest | python 3.7->3.9
+name: PYPI Build & Setup On Ubuntu
 on: [push]
 #defaults:
 #  run:
