--- a/.github/workflows/test-requirements-linux.yml
+++ b/.github/workflows/test-requirements-linux.yml
@@ -1,4 +1,4 @@
-name: Test Requirements on Linux/Ubuntu-latest | python 3.7->3.9
+name: Test Requirements on Ubuntu
 on: [push]
 #defaults:
 #  run:
