--- a/.github/workflows/pipup.yml
+++ b/.github/workflows/pipup.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Push To PYPI
+name: PYPI Build & Push
 
 # Controls when the action will run.
 on:
@@ -30,12 +30,6 @@ jobs:
       # Install requirements
       - name: install requirements.txt
         run: python -m pip install -r requirements.txt
-      - name: install requirements-pypi.txt
-        run: python -m pip install -r requirements-pypi.txt
-      - name: install hiphp-desktop/requirements-dst.txt
-        run: python -m pip install -r hiphp-desktop/requirements-dst.txt
-      - name: install hiphp-tk/requirements-tk.txt
-        run: python -m pip install -r hiphp-tk/requirements-tk.txt
 
       # Install dependencies
       - name: "Installs dependencies"
