--- a/.github/workflows/python-app-on-win.yml
+++ b/.github/workflows/python-app-on-win.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Create Workspace Folder
         run: mkdir -p wrdir && mkdir -p wrdir/hiphp
       - name: Copy Files & folders to Workspace Folder
-        run: cp -r hiphp/* wrdir/hiphp && cp run.py wrdir/run.py
+        run: cp -r hiphp/* wrdir/hiphp && cp main.py wrdir/main.py
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
         run: pip install -r requirements.txt
-      - name: Run
-        run: python wrdir/run.py
+      - name: Test hiphp
+        run: python wrdir/main.py --key="123" --url="https://www.google.com/"
