--- a/.github/workflows/force-apt.yml
+++ b/.github/workflows/force-apt.yml
@@ -1,47 +1,45 @@
-name: force apt
-on: [push]
+name: APT Repository Deployment
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest] #,windows-latest
-        python-version: [3.9]
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{matrix.python-version}}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{matrix.python-version}}
-          # Optional - x64 or x86 architecture, defaults to x64
-          architecture: 'x64'
-      # You can test your matrix by printing the current Python version
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
-      - name: Create Workspace Folder
-        run: |
-            # Define repository variables
-            REPO_NAME="hiphp"
-            GITHUB_USERNAME="yasserbdj96"
-            BRANCH="gh-pages"
-        
-            # Clone the repository
-            #git clone "https://github.com/$GITHUB_USERNAME/$REPO_NAME.git" "$REPO_NAME"
-            #cd "$REPO_NAME"
-        
-            # Generate APT metadata
-            dpkg-scanpackages -m . /dev/null > Packages
-            gzip -k -f Packages
-            apt-ftparchive release . > Release
-        
-            # Commit and push changes to GitHub repository
-            git add .
-            git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
-            git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-            git commit -m "Update APT repository metadata"
-            git push origin main:$BRANCH --force
-        
-            # Print the GitHub Pages URL
-            echo "Your APT repository is now hosted on GitHub Pages at:"
-            echo "https://$GITHUB_USERNAME.github.io/$REPO_NAME/"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Git
+      run: |
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
+
+    - name: Set up APT repository
+      run: |
+        REPO_DIR=""      # Replace with the path to your repository
+        REPO_NAME="hiphp"                   # Replace with your repository name
+        DEB_FILE="hiphp.deb"       # Replace with the path to your .deb file
+
+        cd "$REPO_DIR"
+
+        git checkout --orphan gh-pages
+        git rm -rf .
+
+        cp "$DEB_FILE" .
+
+        dpkg-scanpackages . /dev/null > Packages
+        gzip -k -f Packages
+
+        git add .
+        git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
+        git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+        git commit -m "Add hiphp package"
+        git push origin gh-pages
+
+        echo "Your APT repository is now hosted on GitHub Pages at:"
+        echo "https://$GITHUB_REPOSITORY_OWNER.github.io/$REPO_NAME/"
       
