--- a/.github/workflows/python-app-on-mac.yml
+++ b/.github/workflows/python-app-on-mac.yml
@@ -17,6 +17,8 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v4
+      - name: Install gettext
+        run: brew install gettext
       - name: Set up Python ${{matrix.python-version}}
         uses: actions/setup-python@v4
         with:
